# site-web-arbre-morphologique

./: .gitignore  Cargo.toml  DEPLOIEMENT.md  INTEGRATION_ANGULAR.md  README.md  angular.json  build-for-netlify.ps1  netlify.toml  package-lock.json  package.json  test_input.txt
public/wasm/: .gitignore  moteur_morphologique.d.ts  moteur_morphologique.js  moteur_morphologique_bg.wasm  moteur_morphologique_bg.wasm.d.ts  package.json
src/: arbre.rs  hashing.rs  index.html  lib.rs  main.rs  morpho_analyzer.rs  styles.css
src/app/: app.css  app.html  app.ts
src/app/services/: morpho.service.ts
